about:applications: Fix missing margin
Note: I can't test this because it doesn't work in Flatpak. The fix is
the same as for the memory page so it's probably fine, but some extra
care during review might be good :)

--- a/src/resources/about.css
+++ b/src/resources/about.css
@@ -185,6 +185,10 @@ html.epiphany-html {
 
 /* about:applications */
 
+#applications {
+    margin: 20px;
+}
+
 .applications-body table { width: 100%; border-collapse: collapse; }
 
 .applications-body table, td { 
